Reorg, currently broken

--- a/quiz/templates/create.html
+++ b/quiz/templates/create.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div>
-      <h1>New quiz</h1>
+      <h1>Create new quiz</h1>
       <form method="POST">
         <label for="inst">Quiz name: </label>
         <input type="text" name="inst" id="inst" required>
