Working player management

--- a/quiz/templates/edit.html
+++ b/quiz/templates/edit.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>Edit quiz: {{ inst }}</h1>
+    <h1>Edit quiz: {{ key }}</h1>
     <ul>
       <li><a href="{{ purl }}"> Edit players</a></li>
       <li><a href="{{ qurl }}"> Edit questions</a></li>
