--- a/quiz/templates/new.html
+++ b/quiz/templates/new.html
@@ -8,8 +8,8 @@
     <div>
       <h1>Create new quiz</h1>
       <form method="POST">
-        <label for="inst">Quiz name: </label>
-        <input type="text" name="inst" id="inst" required>
+        <label for="key">Quiz name: </label>
+        <input type="text" name="key" id="key" required>
         <input type="submit" value="Create!">
       </form>
     </div>
