--- a/quiz/templates/new.html
+++ b/quiz/templates/new.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Quiz!</title>
+    <title>quiz|new</title>
     <meta charset="utf-8" />
   </head>
   <body>
     <div>
       <h1>Create new quiz</h1>
       <form method="POST">
-        <label for="key">Quiz name: </label>
-        <input type="text" name="key" id="key" required>
+        <label for="quizid">Quiz name: </label>
+        <input type="text" name="quizid" id="quizid" required>
         <input type="submit" value="Create!">
       </form>
     </div>
