--- a/quiz/templates/admin/index.html
+++ b/quiz/templates/admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>[{{ quizid }}] Quiz admin</h1>
+    <h1>Quiz admin: {{quizid }}</h1>
     <ul>
       <li><a href="{{ url_edit_teams }}">Edit teams</a></li>
       <li><a href="{{ url_edit_questions }}">Edit questions</a></li>
