--- a/quiz/templates/admin/teams.html
+++ b/quiz/templates/admin/teams.html
@@ -20,6 +20,21 @@
     </style>
   </head>
   <body>
+    <h1>Edit teams: {{ quizid }}</h1>
+    <ul>
+      <li>
+        <a href="..">home</a>
+      </li>
+      <li>
+        <a href="../teams">teams</a>
+      </li>
+      <li>
+        <a href="../questions">questions</a>
+      </li>
+      <li>
+        <a href="../run">run</a>
+      </li>
+    </ul>
     <form method="POST" action="add" id="add"></form>
     <table>
       <thead>
