--- a/quiz/templates/admin/index.html
+++ b/quiz/templates/admin/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>quiz|{{ quizid }}|admin</title>
     <meta charset="utf-8" />
+    <title>quiz|{{ quizid }}|admin</title>
+    <link rel="stylesheet" href="/static/admin.css">
   </head>
   <body>
     <h1>Quiz admin: {{quizid }}</h1>
