--- a/quiz/templates/admin/questions.html
+++ b/quiz/templates/admin/questions.html
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>quiz|{{ quizid }}|questions</title>
     <meta charset="utf-8" />
-    <style>
-      table {
-        font-family: monospace;
-        border-collapse: collapse;
-      }
-      th, td {
-        padding: 8px;
-      }
-      thead > tr {
-        background-color: #4CAF50;
-        color: white;
-        border: solid;
-        border-bottom: 2px solid black;
-      }
-    </style>
+    <title>quiz|{{ quizid }}|questions</title>
+    <link rel="stylesheet" href="/static/admin.css">
   </head>
   <body>
     <h1>Edit questions: {{ quizid }}</h1>
