--- a/quiz/templates/admin/index.html
+++ b/quiz/templates/admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>quiz|{{ quizid }}|admin</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='admin.css' }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin.css') }}">
   </head>
   <body>
     <h1>Quiz admin: {{ quizid }}</h1>
