--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -20,6 +20,6 @@
         </div>
       </div>
     </template>
-    <script src="/static/quiz.js"></script>
+    <script src="{{ url_for('static', filename='quiz.js') }}"></script>
   </body>
 </html>
