--- a/quiz/templates/admin/questions.html
+++ b/quiz/templates/admin/questions.html
@@ -55,26 +55,30 @@
         <tr>
           <td>
             <form method="POST" action="remove">
-              <input type="hidden" name="number" value="{{ question[0] }}">
+              <input type="hidden" name="number" value="{{ question.number }}">
               <input type="submit" value="-">
             </form>
           </td>
           <td>{{ question[0] }}</td>
           <td>
             <form method="POST" action="update-text">
-              <input type="hidden" name="number" value="{{ question[0] }}">
-              <input type="text" name="text" value="{{ question[2] }}" required>
+              <input type="hidden" name="number" value="{{ question.number }}">
+              <input type="text" name="text" value="{{ question.text }}" required>
               <input type="submit" value="Update">
             </form>
           </td>
           <td>
             <form method="POST" action="update-answer">
-              <input type="hidden" name="number" value="{{ question[0] }}">
-              <input type="text" name="answer" value="{{ question[3] }}" required>
+              <input type="hidden" name="number" value="{{ question.number }}">
+              <input type="text" name="answer" value="{{ question.answer }}" required>
               <input type="submit" value="Update">
             </form>
           </td>
-          <td>@@@</td>
+          <td>
+            {% if question.kind == 1 %}
+            <img width="100px" src="{{ url_for('assets', quizid=quizid, asset=question.filename) }}">
+            {% endif %}
+          </td>
         </tr>
         {% endfor %}
       </tbody>
