--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -13,6 +13,7 @@
         <div class="question_number"></div>
         <div>
           <div class="question_text"></div>
+          <div class="question_asset"></div>
           <div>
             <input class="question_guess">
           </div>
