--- a/quiz/templates/admin/questions.html
+++ b/quiz/templates/admin/questions.html
@@ -59,7 +59,7 @@
               <input type="submit" value="-">
             </form>
           </td>
-          <td>{{ question[0] }}</td>
+          <td>{{ question.number }}</td>
           <td>
             <form method="POST" action="update-text">
               <input type="hidden" name="number" value="{{ question.number }}">
@@ -75,8 +75,15 @@
             </form>
           </td>
           <td>
-            {% if question.kind == 1 %}
-            <img width="100px" src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}">
+            {% if question.kind.value == 0 %}
+            {% elif question.kind.value == 1 %}
+            <img width="100px" src="{{ url_for('assets',
+                                               quizid=quizid,
+                                               filename=question.filename) }}">
+            {% elif question.kind.value == 2 %}
+            <audio src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}">
+            {% elif question.kind.value == 3 %}
+            <video src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}">
             {% endif %}
           </td>
         </tr>
