--- a/quiz/templates/admin/questions.html
+++ b/quiz/templates/admin/questions.html
@@ -77,13 +77,24 @@
           <td>
             {% if question.kind.value == 0 %}
             {% elif question.kind.value == 1 %}
-            <img width="100px" src="{{ url_for('assets',
-                                               quizid=quizid,
-                                               filename=question.filename) }}">
+            <img
+              src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}"
+              width="100px">
             {% elif question.kind.value == 2 %}
-            <audio src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}">
+            <audio
+              src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}"
+              type="{{ question.mimetype  }}"
+              controls>
+              Your browser does not support the <code>audio</code> element.
+            </audio>
             {% elif question.kind.value == 3 %}
-            <video src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}">
+            <video
+              src="{{ url_for('assets', quizid=quizid, filename=question.filename) }}"
+              type="{{ question.mimetype  }}"
+              width="100px"
+              controls>
+              Your browser does not support the <code>audio</code> element.
+            </video>
             {% endif %}
           </td>
         </tr>
