--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -8,16 +8,16 @@
   <body>
     <h1>Team {{ team }} ({{ player }})</h1>
     <div id="quiz"></div>
-    <template id="template_question">
+    <template id="__template">
       <div class="question">
-        <div class="question_number"></div>
+        <div class="__number"></div>
         <div>
-          <div class="question_text"></div>
-          <div class="question_asset"></div>
+          <div class="__text"></div>
+          <div class="__media"></div>
           <div>
-            <input class="question_guess">
+            <input class="__guess">
           </div>
-          <div class="question_answer"></div>
+          <div class="__answer"></div>
         </div>
       </div>
     </template>
