Rough dom update calculation

--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -21,6 +21,9 @@
         </div>
       </div>
     </template>
+    <script src="{{ url_for('static', filename='question.js') }}"></script>
+    <script src="{{ url_for('static', filename='dom.js') }}"></script>
     <script src="{{ url_for('static', filename='quiz.js') }}"></script>
+    <script src="{{ url_for('static', filename='main.js') }}"></script>
   </body>
 </html>
