--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -15,9 +15,11 @@
           <div class="__text"></div>
           <div class="__media"></div>
           <div>
-            <input class="__guess">
+            <input class="__guess" type="text">
+            <button class="__submit">Submit</button>
+            <button class="__discard">Discard</button>
           </div>
-          <div class="__answer"></div>
+          <div class="__answer" hidden></div>
         </div>
       </div>
     </template>
