--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -10,11 +10,15 @@
     <div id="quiz"></div>
     <template id="__template">
       <div class="question">
-        <div class="__number"></div>
         <div>
-          <div class="__text"></div>
+          <div class="__number"></div>
+        </div>
+        <div>
+          <span>&nbsp;&nbsp;</span>
+          <span class="__text"></span>
           <div class="__media"></div>
           <div>
+            <span class="__saved">&nbsp;&nbsp;</span>
             <input class="__guess" type="text">
             <button class="__submit">Submit</button>
             <button class="__discard">Discard</button>
