--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -27,6 +27,7 @@
         </div>
       </div>
     </template>
+    <script src="{{ url_for('static', filename='constants.js') }}"></script>
     <script src="{{ url_for('static', filename='question.js') }}"></script>
     <script src="{{ url_for('static', filename='dom.js') }}"></script>
     <script src="{{ url_for('static', filename='quiz.js') }}"></script>
