--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -29,6 +29,7 @@
     </template>
     <script src="{{ url_for('static', filename='constants.js') }}"></script>
     <script src="{{ url_for('static', filename='question.js') }}"></script>
+    <script src="{{ url_for('static', filename='comms.js') }}"></script>
     <script src="{{ url_for('static', filename='dom.js') }}"></script>
     <script src="{{ url_for('static', filename='quiz.js') }}"></script>
     <script src="{{ url_for('static', filename='main.js') }}"></script>
