Remove a few logs

--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -32,6 +32,9 @@
     <script src="{{ url_for('static', filename='comms.js') }}"></script>
     <script src="{{ url_for('static', filename='dom.js') }}"></script>
     <script src="{{ url_for('static', filename='quiz.js') }}"></script>
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
+    <script>
+      let quiz = new Quiz("#quiz");
+      quiz.run(1000);
+    </script>
   </body>
 </html>
