--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -13,16 +13,18 @@
         <div>
           <div class="__number"></div>
         </div>
+        <div class="__saved">
+          &nbsp;&nbsp;
+        </div>
         <div>
-          <span>&nbsp;&nbsp;</span>
           <span class="__text"></span>
           <div class="__media"></div>
           <div>
-            <span class="__saved">&nbsp;&nbsp;</span>
             <input class="__guess" type="text">
             <button class="__submit">Submit</button>
             <button class="__discard">Discard</button>
           </div>
+          <div class="__cursors"></div>
           <div class="__answer" hidden></div>
         </div>
       </div>
