--- a/quiz/templates/admin/teams.html
+++ b/quiz/templates/admin/teams.html
@@ -19,6 +19,7 @@
         <tr>
           <th></th>
           <th>#</th>
+          <th>Password</th>
           <th>Notes</th>
         </tr>
       </thead>
@@ -32,10 +33,11 @@
             </form>
           </td>
           <td>{{ team[0] }}</td>
+          <td>{{ team[1] }}</td>
           <td>
             <form method="POST" action="update">
               <input type="hidden" name="number" value="{{ team[0] }}">
-              <input type="text" name="notes" value="{{ team[1] }}" required>
+              <input type="text" name="notes" value="{{ team[2] }}" required>
               <input type="submit" value="Update">
             </form>
           </td>
@@ -47,8 +49,8 @@
           <td>
             <input form="add" type="submit" value="+">
           </td>
-          <td>
-          </td>
+          <td></td>
+          <td></td>
           <td>
             <input form="add" type="text" name="notes" required>
           </td>
