--- a/quiz/templates/whoami.html
+++ b/quiz/templates/whoami.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>quiz|{{ quizid }}|whoami</title>
+    <title>quiz|whoami</title>
     <meta charset="utf-8" />
   </head>
   <body>
-    <h1>[{{ quizid }}] Who am I?</h1>
-    team: {{ team }}<br>
-    player: {{ player }}<br>
+    <h1>Who am I?</h1>
+    {% if quizid is none %}
+    Quiz: --<br>
+    Team: --<br>
+    Name: --<br>
+    {% else %}
+    Quiz: <a href="{{ url_for('play', quizid=quizid) }}">{{ quizid }}</a><br>
+    Team: {{ team }}<br>
+    Name: {{ player }}<br>
+    {% endif %}
   </body>
 </html>
