--- a/quiz/templates/join.html
+++ b/quiz/templates/join.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>quiz|{{ quizid }}|join</title>
+    <title>quiz|join</title>
     <meta charset="utf-8" />
   </head>
   <body>
