--- a/quiz/templates/login.html
+++ b/quiz/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>quiz|{{ quizid }}|auth</title>
+    <title>quiz|login</title>
     <meta charset="utf-8" />
     <style>
     form.credentials {
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <h1>Team {{ team }}: Join</h1>
+    <h1>[{{ quizid }}] Join team {{ team }}</h1>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul class=flashes>
