--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>quiz|{{ quizid }}|play</title>
+    <title>quiz|play</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='play.css') }}">
   </head>
   <body>
