--- a/quiz/static/play.css
+++ b/quiz/static/play.css
@@ -6,6 +6,24 @@ div {
   margin: 8px 0px 8px 0px;
 }
 
+#quiz, html, body {
+  height: 100%;
+}
+
+#questions {
+  float: left;
+  width: 60%;
+  height: 100%;
+  overflow: scroll;
+}
+
+#eventlog {
+  float: left;
+  width: 40%;
+  height: 100%;
+  overflow: scroll;
+}
+
 div.question {
   display: flex;
   border: 2px solid #82b74b;
