--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -37,6 +37,7 @@
       <div class="logentry">
         <span class="__timestamp"></span>
         <span class="__logentry"></span>
+        <hr style="height:1px;border-width:0;background-color:#E0E0E0;">
       </div>
     </template>
     <script src="{{ url_for('static', filename='constants.js') }}"></script>
