--- a/quiz/static/play.css
+++ b/quiz/static/play.css
@@ -66,3 +66,24 @@ div.__cursors {
   border: 0px;
   font-size: x-small;
 }
+
+.working {
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 16px;
+  height: 16px;
+  animation: spin 1s linear infinite;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
