--- a/quiz/static/play.css
+++ b/quiz/static/play.css
@@ -24,6 +24,12 @@ div {
   overflow: scroll;
 }
 
+#eventlog hr {
+  height: 1px;
+  border-width: 0px;
+  background-color: #E0E0E0;
+}
+
 div.question {
   display: flex;
   border: 2px solid #82b74b;
@@ -67,12 +73,42 @@ div.__cursors {
   font-size: x-small;
 }
 
-.working {
-  border: 4px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 4px solid #3498db;
-  width: 16px;
-  height: 16px;
+button {
+  height: 24px;
+  width: 24px;
+  margin: 0px;
+  padding: 4px;
+  vertical-align: middle;
+  line-height: 1.5;
+  border-radius: .25rem;
+  border: 0px solid transparent;
+}
+
+button:not(:disabled) {
+  cursor: pointer;
+}
+
+button.__submit {
+  color: white;
+  background-color: #28a745;
+}
+
+button.__submit:disabled {
+  color: white;
+  background-color: #e0e0e0;
+}
+
+button.__discard {
+  color: white;
+  background-color: #dc3545;
+}
+
+button.__discard:disabled {
+  color: white;
+  background-color: #e0e0e0;
+}
+
+.spinning {
   animation: spin 1s linear infinite;
   -webkit-animation: spin 1s linear infinite; /* Safari */
 }
