--- a/quiz/templates/play.html
+++ b/quiz/templates/play.html
@@ -29,15 +29,15 @@
             <button class="__discard"></button>
           </div>
           <div class="__cursors"></div>
-          <div class="__answer" hidden></div>
+          <span class="__answer" hidden></span>
         </div>
       </div>
     </template>
     <template id="__template_eventlog">
       <div class="logentry">
-        <hr>
         <span class="__timestamp"></span>
         <span class="__logentry"></span>
+        <hr>
       </div>
     </template>
     <template id="__template_icon_submit">
